# llvm

./: .gitignore  .hgignore  .hgtags  CHANGELOG.md  INSTALL.md  INSTALL.txt  LICENSE  LLVM.hs  Makefile  PROBLEMS.md  PROBLEMS.txt  README.md  README.txt  Setup.hs  Setup.lhs  configure  configure.ac  llvm-st.cabal  llvm.buildinfo.in  llvm.buildinfo.windows.in  llvm.cabal
Data/: TypeNumbers.hs
LLVM/: Base.hsc  Core.hs  ExecutionEngine.hs  Instances.hs  Internal.hs  ST.hs
LLVM/Core/: Builder.hs  Builders.hs  CodeGen.hs  CodeGenMonad.hs  CodegenMonad.hs  Constant.hs  Constants.hs  Data.hs  FFI.hsc  Instances.hs  Instruction.hs  Instructions.hs  Intrinsics.hs  Type.hs  Types.hs  Util.hs  Utils.hs  Value.hs  Values.hs  Vector.hs
LLVM/ExecutionEngine/: Base.hsc  Engine.hs  FFI.hs  FFI.hsc  Target.hs
LLVM/FFI/: BitReader.hsc  BitWriter.hsc  Core.hsc  ExecutionEngine.hsc  Support.hsc  Target.hs  Target.hsc
LLVM/FFI/Transforms/: IPO.hsc  Scalar.hs  Scalar.hsc
LLVM/Transforms/: ScalarFFI.hs
LLVM/Util/: Arithmetic.hs  File.hs  Foreign.hs  Loop.hs  Memory.hs  Optimize.hs
base/: CHANGELOG.md  README.md  Setup.hs  configure.ac  llvm-base.buildinfo.in  llvm-base.buildinfo.windows.in  llvm-base.cabal
base/LLVM/: ST.hs
base/LLVM/FFI/: Analysis.hsc  AssemblyReader.hsc  BitReader.hsc  BitWriter.hsc  Core.hsc  ExecutionEngine.hsc  Linker.hsc  Support.hsc  Target.hsc
base/LLVM/FFI/Transforms/: IPO.hsc  PassManagerBuilder.hsc  Scalar.hsc
base/LLVM/Wrapper/: Analysis.hs  BitReader.hs  BitWriter.hs  Core.hs  ExecutionEngine.hs  Internal.hs  Linker.hs  Target.hs
base/LLVM/Wrapper/Transforms/: PassManagerBuilder.hs
base/cbits/: extra.cpp  free.c  malloc.c  support.cpp
base/include/: extra.h  hs_llvm_config.h.in  passes-inl.h  support.h
base/tools/: FunctionMangler.hs  FunctionMangulation.hs  Makefile  ltrace.readme
cbits/: extra.cpp  support.cpp  support.h
examples/: Align.hs  Arith.hs  Array.hs  BrainF.hs  CallConv.hs  Convert.hs  DotProd.hs  Fibonacci.hs  HelloJIT.hs  HelloJit.hs  HowToUseJIT.hs  List.hs  Loop.hs  Makefile  ModuleMaker.hs  Struct.hs  Varargs.hs  Vector.hs  mainfib.c  structCheck.c
include/: extra.h  hs_llvm_config.h.in
tests/: Makefile  TestValue.hs
tools/: DiffFFI.hs  FunctionMangler.hs  FunctionMangulation.hs  FunctionPattern.hs  IntrinsicMangler.hs  Makefile  ltrace.config
wrapper/: llvm-wrapper.cabal
wrapper/LLVM/: ST.hs
wrapper/LLVM/Wrapper/: Analysis.hs  BitReader.hs  BitWriter.hs  Core.hs  ExecutionEngine.hs  Internal.hs  Linker.hs
wrapper/LLVM/Wrapper/Transforms/: IPO.hs  PassManagerBuilder.hs  Scalar.hs
