name:               llvm-st
version:            3.2.0.0
synopsis:           Pure interface to LLVM API
category:           Compilers/Interpreters, Code Generation
license:            BSD3
author:             Benjamin Saunders
maintainer:         Benjamin Saunders <besaunde@sfu.ca>
cabal-version:      >= 1.2
build-type:         Simple

library
  build-depends: base >= 3 && < 5, llvm-wrapper >= 3.2.0.0 && < 4,
                 mtl >= 2.1 && < 3, bytestring >= 0.10
  exposed-modules: LLVM.ST
