name:          llvm
version:       3.0.0.0
license:       BSD3
license-file:  LICENSE
synopsis:      Bindings to the LLVM compiler toolkit.
description:
  Bindings to the LLVM compiler toolkit.
  .
  We try to stay up to date with LLVM releases.  The current version
  of this package is compatible with LLVM 2.9 and 2.8.  Please
  understand that the package may or may not work against older LLVM
  releases; we don't have the time or resources to test across
  multiple releases.
  .
  * New in 0.9.1.1: Builds against LLVM 2.9.
  .
  * New in 0.9.1.0: Util.Memory for memory related intrinsics.
  .
  * New in 0.9.0.0: Adapted to LLVM 2.8 (removed support for Union types).
author:        Bryan O'Sullivan, Lennart Augustsson
maintainer:    Bryan O'Sullivan <bos@serpentine.com>, Lennart Augustsson <lennart@augustsson.net>
homepage:      https://github.com/bos/llvm
bug-reports:   https://github.com/bos/llvm/issues
stability:     experimental
category:      Compilers/Interpreters, Code Generation
tested-with:   GHC == 6.10.4, GHC == 6.12.3, GHC == 7.0.3
cabal-version: >= 1.10
build-type:    Simple

extra-source-files:
    *.md
    examples/*.c
    examples/*.hs
    tests/*.hs
    tests/Makefile

library
  default-language: Haskell98
  build-depends:
    base >= 3 && < 5,
    bytestring >= 0.9,
    directory,
    llvm-base == 3.0.*,
    mtl,
    process,
    type-level,
    containers

  ghc-options: -Wall

  if os(darwin)
    ld-options: -w 
    frameworks: vecLib
    cpp-options: -D__MACOS__

  exposed-modules:
      LLVM.Core
      LLVM.ExecutionEngine
      LLVM.Util.Arithmetic
      LLVM.Util.File
      LLVM.Util.Foreign
      LLVM.Util.Loop
      LLVM.Util.Memory
      LLVM.Util.Optimize

  other-modules:
      LLVM.Core.CodeGen
      LLVM.Core.CodeGenMonad
      LLVM.Core.Data
      LLVM.Core.Instructions
      LLVM.Core.Type
      LLVM.Core.Util
      LLVM.Core.Vector
      LLVM.ExecutionEngine.Engine
      LLVM.ExecutionEngine.Target

source-repository head
  type:     git
  location: git://github.com/bos/llvm.git

source-repository head
  type:     mercurial
  location: https://bitbucket.org/bos/llvm/
